Added mock service with TTK
