# src/server/interface/swagger.json
@@ -6,6 +6,29 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Health": {
+				"properties": {
+					"status": {
+						"type": "string",
+						"enum": [
+							"OK",
+							"ERROR"
+						]
+					},
+					"mockServerResponse": {},
+					"errors": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"status"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"User": {
 				"properties": {
 					"id": {
@@ -83,6 +106,25 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/health": {
+			"get": {
+				"operationId": "GetHealth",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Health"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/users/{userId}": {
 			"get": {
 				"operationId": "GetUser",
